--- a/libgraph/Makefile
+++ b/libgraph/Makefile
@@ -6,7 +6,7 @@
 #    By: cpieri <cpieri@student.42.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2018/06/01 15:43:04 by cpieri            #+#    #+#              #
-#    Updated: 2018/06/17 09:39:45 by bspindle         ###   ########.fr        #
+#    Updated: 2018/06/21 14:14:20 by cvautrai         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -36,6 +36,7 @@ SRCS = 		matrix.c			\
 			bloc.c				\
 			label.c				\
 			vector_2d_op.c		\
+			objs.c
 
 
 OBJS	=	$(SRCS:.c=.o)
