--- a/libgraph/Makefile
+++ b/libgraph/Makefile
@@ -6,7 +6,7 @@
 #    By: cpieri <cpieri@student.42.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2018/06/01 15:43:04 by cpieri            #+#    #+#              #
-#    Updated: 2018/06/23 21:39:08 by cpieri           ###   ########.fr        #
+#    Updated: 2018/06/28 10:37:44 by cvautrai         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -46,25 +46,27 @@ SRC		=	$(addprefix $(SRC_PATH)/,$(SRCS) )
 
 OBJ		=	$(addprefix $(OBJ_PATH)/,$(OBJS) )
 
-.PHONY: all clean fclean re
+.PHONY: all clean fclean re echo
 
 all:		$(NAME)
 
-$(NAME): 	$(OBJ)
-			@echo "compiling libgraph.a"
+$(NAME): 	echo $(OBJ)
 			@ar rc $(NAME) $(OBJ) ../libft/libft.a
 			@ranlib $(NAME)
 
+echo:
+			@echo -n Compiling libgraph
+
 $(OBJ_PATH)/%.o: $(SRC_PATH)/%.c
 			@mkdir $(OBJ_PATH) 2> /dev/null || true
-			$(CC) $(CFLAGS) $(CPPFLAG) -o $@ -c $<
+			@$(CC) $(CFLAGS) $(CPPFLAG) -o $@ -c $<
+			@echo -n .
 
 clean:
 			@/bin/rm -f $(OBJ)
 			@rmdir $(OBJ_PATH) 2> /dev/null || true
 
 fclean:		clean
-			@echo "cleaning libgraph.a"
 			@/bin/rm -f $(NAME)
 
 re:			fclean all
