--- a/libgraph/Makefile
+++ b/libgraph/Makefile
@@ -6,7 +6,7 @@
 #    By: cpieri <cpieri@student.42.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2018/06/01 15:43:04 by cpieri            #+#    #+#              #
-#    Updated: 2018/06/28 11:33:02 by tmilon           ###   ########.fr        #
+#    Updated: 2018/06/28 12:46:38 by cvautrai         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -16,15 +16,20 @@ CC		=	gcc
 
 CFLAGS	=	-Wall -Wextra -Werror
 
-INCS	=	libgraph.h
-
-HEADERS	=	./libgraph.h
-
 SRC_PATH=	srcs
 
 OBJ_PATH=	obj
 
 CPPFLAG	=	-Iinclude
+
+DEPS =		Makefile			\
+			include/bloc.h		\
+			include/color.h		\
+			include/libgraph.h	\
+			include/vector.h	\
+			include/button.h	\
+			include/label.h		\
+			include/matrix.h
 
 SRCS = 		matrix.c			\
 			rotation_matrix.c	\
@@ -48,16 +53,16 @@ OBJ		=	$(addprefix $(OBJ_PATH)/,$(OBJS) )
 
 .PHONY: all clean fclean re echo
 
-all:		$(NAME)
+all:		echo $(NAME)
 
-$(NAME): 	echo $(OBJ)
+$(NAME): 	$(OBJ)
 			@ar rc $(NAME) $(OBJ) ../libft/libft.a
 			@ranlib $(NAME)
 
 echo:
 			@echo -n Getting libgraph ready
 
-$(OBJ_PATH)/%.o: $(SRC_PATH)/%.c
+$(OBJ_PATH)/%.o: $(SRC_PATH)/%.c $(DEPS)
 			@mkdir $(OBJ_PATH) 2> /dev/null || true
 			@$(CC) $(CFLAGS) $(CPPFLAG) -o $@ -c $<
 			@echo -n .
